# Jolkr.app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug-upload-sni.sh  diag-upload-domain.sh  docs-backend-api-reference.md  docs-frontend-backend-integration.md  fix-jolkr-wildcard-alias.sh  permission-audit.md  plan-code-uiux-health-audit.md  plan-component-skeleton-loading-1772771256.md  plan-quantum-e2ee.md  plan-v0.2.0-UI_UX-1772767761.md  recover-and-fix.sh  release-notes-v0.1.0.md  release-notes-v0.3.0.md  rollback-everything.sh  setup-upload-domain.sh
.github/workflows/: codegen-drift.yml  pr-source-branch-check.yml  release.yml
docs/audits/: 2026-05-03-frontend-audit.md
figma/: Jolkr.app.fig
jolkr-app/: backend-audit-todo.md  docs-backend-api-reference.md  eslint.config.js  inconsistency-audit-2026-05-02.md  index.html  package-lock.json  package.json  plan-2026-03-03_final-audit.md  testbot1_ws.mjs  vite.config.ts  vitest.config.ts
jolkr-app/public/: adi-registration.properties  sw.js  theme-init.js  twitch-embed.html
jolkr-app/scripts/: build-release.sh  bump-version.mjs  lint-summary.cjs  publish-update.sh  verify-locales.cjs
jolkr-app/src/: App.tsx  main.tsx
jolkr-app/src-tauri/: Cargo.toml  tauri.conf.json
jolkr-app/src-tauri/capabilities/: default.json  mobile.json
jolkr-app/src-tauri/icons/: icon.icns
jolkr-app/src-tauri/src/: lib.rs  main.rs
jolkr-server/: Cargo.toml
jolkr-server/cluster/: .env.template
jolkr-server/cluster/config/etcd/: etcd.conf.yml
jolkr-server/cluster/config/keepalived/: keepalived-backup.conf  keepalived-master.conf
jolkr-server/cluster/config/nats/: nats-entrypoint.sh  nats-node-a.conf  nats-node-b.conf  nats-node-c.conf
jolkr-server/cluster/config/nginx/: nginx-ha.conf
jolkr-server/cluster/config/patroni/: patroni.yml
jolkr-server/cluster/config/redis/: sentinel-entrypoint.sh  sentinel.conf
jolkr-server/cluster/node-a/: docker-compose.yml
jolkr-server/cluster/node-b/: docker-compose.yml
jolkr-server/cluster/node-c/: docker-compose.yml
jolkr-server/cluster/scripts/: failover-test.sh  health-check.sh  setup-node.sh
jolkr-server/config/: default.toml
jolkr-server/crates/jolkr-api/: Cargo.toml
jolkr-server/crates/jolkr-api/src/: config.rs  email_service.rs  embed_service.rs  errors.rs  image_processing.rs  main.rs  nats_bus.rs  push_service.rs  redis_store.rs  storage.rs  stream_token.rs
jolkr-server/crates/jolkr-api/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
jolkr-server/crates/jolkr-api/src/routes/: attachments.rs  audit_log.rs  auth.rs  avatars.rs  categories.rs  channel_encryption.rs  channels.rs  devices.rs  dms.rs  emojis.rs  files.rs  friends.rs  gifs.rs  health.rs  invites.rs  keys.rs  messages.rs  mod.rs  notifications.rs  polls.rs  presence.rs  push.rs  reactions.rs  roles.rs  servers.rs  threads.rs  users.rs  webhooks.rs
jolkr-server/crates/jolkr-api/src/routes/dms/: attachments.rs  calls.rs  management.rs  messages.rs  mod.rs  pins.rs  reactions.rs  types.rs
jolkr-server/crates/jolkr-api/src/ws/: events.rs  gateway.rs  handler.rs  mod.rs
jolkr-server/crates/jolkr-common/: Cargo.toml
jolkr-server/crates/jolkr-common/src/: errors.rs  lib.rs  permissions.rs  serde_helpers.rs  types.rs
jolkr-server/crates/jolkr-core/: Cargo.toml
jolkr-server/crates/jolkr-core/src/: lib.rs
jolkr-server/crates/jolkr-core/src/crypto/: keys.rs  mod.rs
jolkr-server/crates/jolkr-core/src/services/: auth.rs  category.rs  channel.rs  channel_encryption.rs  dm.rs  emoji.rs  friendship.rs  invite.rs  key.rs  message.rs  mod.rs  poll.rs  role.rs  server.rs  thread.rs  user.rs  webhook.rs
jolkr-server/crates/jolkr-db/: Cargo.toml
jolkr-server/crates/jolkr-db/src/: lib.rs  models.rs
jolkr-server/crates/jolkr-db/src/repo/: attachments.rs  audit_log.rs  bans.rs  categories.rs  channel_encryption.rs  channel_overwrites.rs  channel_reads.rs  channels.rs  devices.rs  dms.rs  email_verification.rs  embeds.rs  emojis.rs  friendships.rs  gif_favorites.rs  invites.rs  keys.rs  members.rs  messages.rs  mod.rs  notification_settings.rs  password_resets.rs  pins.rs  polls.rs  reactions.rs  roles.rs  servers.rs  sessions.rs  threads.rs  users.rs  webhooks.rs
jolkr-server/crates/jolkr-media/: Cargo.toml
jolkr-server/crates/jolkr-media/src/: config.rs  main.rs  presence.rs  rooms.rs  signaling.rs
jolkr-server/crates/jolkr-media/src/sfu/: mod.rs  types.rs
jolkr-server/docker/: .env.example  Dockerfile.api  Dockerfile.media  docker-compose.yml  nginx.conf  security_headers.conf
jolkr-server/docker/landing/: index.html  privacy.html  terms.html
jolkr-server/docker/updates/: latest.json
jolkr-server/migrations/: 001_users.sql  002_servers.sql  003_messages.sql  004_dm.sql  005_social.sql  006_keys.sql  007_dm_features.sql  008_moderation.sql  009_channel_overwrites.sql  010_thread_fixes.sql  011_password_reset_tokens.sql  012_indexes_and_fixes.sql  013_server_emojis.sql  014_message_embeds.sql  015_notification_settings.sql  016_audit_log.sql  017_member_timeouts.sql  018_webhooks.sql  019_polls.sql  020_dm_message_index.sql  021_pq_keys.sql  022_channel_encryption_keys.sql  023_server_discovery.sql  024_dm_read_receipts.sql  025_server_positions.sql  026_dm_close.sql  027_system_users.sql  028_dm_pins.sql  029_cleanup_e2ee_devices.sql  030_member_roles_index.sql  031_channel_read_states.sql  032_unify_encrypted_content.sql  033_audit_hardening.sql  034_server_theme.sql  035_user_banner_color.sql  036_email_verification.sql  037_gif_favorites.sql  038_privacy_settings.sql  039_dm_message_hidden.sql  040_force_logout_sec_011.sql  (+1 more)
jolkr-server/tests/load/: api-load.js  auth-load.js  full-scenario.js  webhook-load.js  ws-load.js
keys/: jolkr-update.key.pub
play-store-assets/: .gitignore  README.md  make-placeholders.mjs  package.json  render.mjs  verify.mjs
play-store-assets/template/: feature-graphic.html  (+2 more)
scripts/: bulk_lint_fix.py  fix_let_underscore.py  playstore_bundles.py  playstore_empty_internal.py  playstore_remove_draft.py  playstore_status.py  verify-docs.py
(+386 files in other folders)
