[workspace]
resolver = "2"
members = [
    "crates/jolkr-common",
    "crates/jolkr-db",
    "crates/jolkr-core",
    "crates/jolkr-api",
    "crates/jolkr-media",
]

[workspace.package]
version = "0.11.2"
edition = "2021"
authors = ["Jolkr Team"]
license = "Proprietary"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "request-id"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }

# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# NATS
async-nats = "0.38"

# S3 / MinIO
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# WebRTC
str0m = "0.16"

# Web Push
web-push = "0.11"

# HTTP client (for link embed fetching)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "gzip", "json"] }

# URL encoding (for GIF image proxy)
urlencoding = "2"

# HTML parsing (for OG meta tags)
scraper = "0.22"

[workspace.lints.rust]
# Bug-catching rustc lints. Pedantic/style-noise lints (pedantic, nursery) are
# omitted by design — they produced thousands of low-value warnings on stable code.
future_incompatible = { level = "warn", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

dead_code = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
let_underscore_drop = "warn"
let_underscore_lock = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
# Curated Clippy config: `clippy::all` (correctness/suspicious/style/complexity/perf)
# plus hand-picked bug-catchers. `pedantic`, `nursery` and most `restriction` lints
# are deliberately off — they are documented as "default-allow, opt-in selectively".
all = { level = "warn", priority = -1 }

# Bug-catching restriction lints worth keeping on.
dbg_macro = "warn"
mem_forget = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
print_stdout = "warn"
print_stderr = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Allowed with reason — see `// WHY:` notes below each.
# WHY: transitive deps pin different versions of common libs.
multiple_crate_versions = "allow"
# WHY: idiomatic — `routes/channels.rs` exports `ChannelsRouter`, drift between file
# and type name would be more confusing than the repetition.
module_name_repetitions = "allow"
pattern_type_mismatch = "allow"
multiple_inherent_impl = "allow"
# WHY: fires on every `Regex::new(literal)`, `"127.0.0.1".parse()` and main-fn env-var
# bootstrap. These are infallible-or-fatal at startup; the lint is alarm-fatigue, not
# safety. Real `panic!`/`todo!` calls are still caught by the lints above.
unwrap_used = "allow"
expect_used = "allow"
indexing_slicing = "allow"
# WHY: axum handlers take many extractors by design (State, Auth, Path, Query, Json).
# The "too many arguments" threshold of 7 is too low for this framework.
too_many_arguments = "allow"
# WHY: catches `.map_err(|_| ...)` that silently swallows the upstream error. Use
# `.map_err(|e| { tracing::warn!(?e, "..."); ... })` (or thiserror `#[from]`) instead.
map_err_ignore = "warn"