[package]
name = "jolkr-core"
version.workspace = true
edition.workspace = true

[dependencies]
jolkr-common = { path = "../jolkr-common" }
jolkr-db = { path = "../jolkr-db" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
subtle = "2"

[lints]
workspace = true
