[package]
name = "jolkr-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jolkr-common = { path = "../jolkr-common" }
